--- a/adminMain.html
+++ b/adminMain.html
@@ -1,95 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Main Page</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<style>
-	.container {
-    display: none;
-}
-	</style>
-</head>
-<body class="bg-light">
-
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <style>
+      .container {
+        display: none;
+      }
+    </style>
+  </head>
+  <body class="bg-light">
     <div class="container">
-        <div class="row justify-content-center align-items-center" style="height: 100vh;">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 class="text-center mb-4" id="mainTitle"></h2>
+      <div
+        class="row justify-content-center align-items-center"
+        style="height: 100vh"
+      >
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="text-center mb-4" id="mainTitle"></h2>
 
-<a href="notificationCRUD.html" class="btn btn-primary btn-block mb-3 notification-btn">Send Notification</a>
-<a href="#" class="btn btn-primary btn-block mb-3 approve-student-info-btn">Approve Student Information</a>
-<a href="timetable.html" class="btn btn-primary btn-block mb-3">Timetable</a>
-<a href="attendanceTimetableList.html" class="btn btn-primary btn-block mb-3 attendance-btn">Attendance</a>
-<a href="assignmentActivities.html" class="btn btn-primary btn-block mb-3 assignment-btn">Assignment</a>
-<a href="addLocation.html" class="btn btn-primary btn-block mb-3 location-btn">Add Location</a>
-<a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
-
-
-                    </div>
-                </div>
+              <a
+                href="notificationCRUD.html"
+                class="btn btn-primary btn-block mb-3 notification-btn"
+                >Send Notification</a
+              >
+              <a
+                href="#"
+                class="btn btn-primary btn-block mb-3 approve-student-info-btn"
+                >Approve Student Information</a
+              >
+              <a href="timetable.html" class="btn btn-primary btn-block mb-3"
+                >Timetable</a
+              >
+              <a
+                href="attendanceTimetableList.html"
+                class="btn btn-primary btn-block mb-3 attendance-btn"
+                >Attendance</a
+              >
+              <a
+                href="assignmentActivities.html"
+                class="btn btn-primary btn-block mb-3 assignment-btn"
+                >Assignment</a
+              >
+              <a
+                href="addLocation.html"
+                class="btn btn-primary btn-block mb-3 location-btn"
+                >Add Location</a
+              >
+              <a
+                href="resetPw.html"
+                class="btn btn-primary btn-block mb-3 reset-btn"
+                >Reset Pw</a
+              >
+              <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<script>
-    // Initialize Firebase
-    const firebaseConfig = {
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script>
+      // Initialize Firebase
+      const firebaseConfig = {
         apiKey: "AIzaSyBtSdg0XwU3cePNEn-HVlof8vj_imx0guA",
         authDomain: "utarapp-9f3db.firebaseapp.com",
-		authDomain: "pctan9491.github.io",
+        authDomain: "pctan9491.github.io",
         projectId: "utarapp-9f3db",
         storageBucket: "utarapp-9f3db.appspot.com",
         messagingSenderId: "331019317153",
-        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0",
+      };
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
 
-    document.addEventListener("DOMContentLoaded", function() {
+      document.addEventListener("DOMContentLoaded", function () {
         const loggedInUser = localStorage.getItem("saveLoginID");
         console.log(loggedInUser);
 
-        db.collection("user").where("loginID", "==", loggedInUser).get()
-        .then((querySnapshot) => {
+        db.collection("user")
+          .where("loginID", "==", loggedInUser)
+          .get()
+          .then((querySnapshot) => {
             if (!querySnapshot.empty) {
-                const userData = querySnapshot.docs[0].data();
-                const userType = userData.userType;
-				const title = document.getElementById("mainTitle");
+              const userData = querySnapshot.docs[0].data();
+              const userType = userData.userType;
+              const title = document.getElementById("mainTitle");
 
-                if (userType === "administrator") {
-				title.textContent = "Admin Main Page";
-                    // Hide attendance for administrators
-                    document.querySelector(".attendance-btn").style.display = "none";
-					document.querySelector(".assignment-btn").style.display = "none";
-					document.querySelector(".location-btn").style.display = "block";
-					document.querySelector(".container").style.display = "block";
-                } else if (userType === "lecturer" || userType === "tutor") {
-				title.textContent = userType.charAt(0).toUpperCase() + userType.slice(1) + " Main Page";
-                    // Hide notification and student approval for lecturers and tutors
-                    document.querySelector(".notification-btn").style.display = "none";
-                    document.querySelector(".location-btn").style.display = "none";
-                    document.querySelector(".approve-student-info-btn").style.display = "none";
-					document.querySelector(".container").style.display = "block";
-                }
+              if (userType === "administrator") {
+                title.textContent = "Admin Main Page";
+                // Hide attendance for administrators
+                document.querySelector(".attendance-btn").style.display =
+                  "none";
+                document.querySelector(".assignment-btn").style.display =
+                  "none";
+                document.querySelector(".location-btn").style.display = "block";
+                document.querySelector(".container").style.display = "block";
+              } else if (userType === "lecturer" || userType === "tutor") {
+                title.textContent =
+                  userType.charAt(0).toUpperCase() +
+                  userType.slice(1) +
+                  " Main Page";
+                // Hide notification and student approval for lecturers and tutors
+                document.querySelector(".notification-btn").style.display =
+                  "none";
+                document.querySelector(".location-btn").style.display = "none";
+                document.querySelector(
+                  ".approve-student-info-btn"
+                ).style.display = "none";
+                document.querySelector(".container").style.display = "block";
+              }
             } else {
-                console.error("No user data found.");
+              console.error("No user data found.");
             }
-        })
-        .catch((error) => {
+          })
+          .catch((error) => {
             console.error("Error fetching user data:", error);
-        });
-    });  
-</script>
-
-</body>
+          });
+      });
+    </script>
+  </body>
 </html>
